--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,163 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Penny Pincher</title>
-        <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="app">
-        <header class="app-header">
-            <h1>Penny Pincher</h1>
-            <nav class="app-nav">
-                <button data-view="dashboard" class="active">Dashboard</button>
-                <button data-view="folders">folders</button>
-                <button data-view="accounts">Accounts</button>
-                <button data-view="transactions">Add Transaction</button>
-            </nav>
-        </header>
-
-        <main class="app-main">
-            <!-- Dashboard View -->
-            <div id="dashboard-view" class="view active"?>
-                <div class="dashboard-header">
-                    <h2>Financial Overview</h2>
-                    <button id="refresh-btn" class="refresh-btn">Refresh</button>
-                </div>
-                <div id="folders-grid" class="folders-grid"></div>
-                <div class="insights-grid">
-                    <div class="insights-column">
-                        <h3>Recent Insights</h3>
-                        <div id="insights-panel" class="insights-panel"></div>
-                    </div>
-                    <div class="projections-column">
-                        <h3>1-Month Projections</h3>
-                        <div id="projections-panel" class="projections-panel"></div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Folder Manager View -->
-            <div id="folders-view" class="view">
-                <div class="section-header">
-                    <h2>Manage Folders</h2>
-                    <button id="new-folder-btn" class="btn-primary">+New Folder</button>
-                </div>
-                <div id="folders-list" class="folders-list"
-              </div>
-
-            <!-- Account Manager View -->
-             <div id="accounts-view" class="view">
-                <div class="section-header">
-                    <h2>Manage Accounts</h2>
-                    <button id="new-account-btn" class="btn-primary">+ New Account</button>
-                </div>
-                <div id="accounts-list" class="accounts-list"></div>
-             </div>
-
-             <!-- Transaction Form View -->
-              <div id="transactions-view" class="view">
-                <div class="section-header">
-                    <h2>Add Transaction</h2>
-                </div>
-                <form id="transaction-form" class="transaction-form-content">
-                    <div class="form-group">
-                        <label>Amount</label>
-                        <input type="number" step="0.01" id="amount" required placeholder="-5.50 for expense, 100.00 for income">
-                    </div>
-                    <div class="form-group">
-                        <label>Description</label>
-                        <input type="text" id="description" required placeholder="Starbucks, Salary, etc.">
-                    </div>
-                    <div class="form-group">
-                        <label>Account</label>
-                        <select id="account_id" required></select>
-                    </div>
-                    <div class="form-group">
-                        <label>Category (optional)</label>
-                        <input type="text" id="category" placeholder="coffee, salary, entertainment">
-                    </div>
-                    <div class="form-group">
-                        <label>Date</label>
-                        <input type="date" id="date" required>
-                    </div>
-                    <button type="submit" class="btn-primary">Add Transaction</button>
-                </form>
-              </div>
-        </main>
-
-        <!-- Modals -->
-         <div id="'modal-overlay" class="modal-overlay" style="display: none;">
-            <div class="modal" id="folder-modal">
-                <h3>Create New Folder</h3>
-                <form id="folder-form">
-                    <div class="form-group">
-                        <label>Folder Name</label>
-                        <input type="text" id="folder-name" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Description</label>
-                        <input type="text" id="folder-description">
-                    </div>
-                    <div class="form-group">
-                        <label>Icon</label>
-                        <div class="icon-grid" id="icon-grid"></div>
-                    </div>
-                    <div class="form-actions">
-                        <button type="button" id="cancel-folder">Cancel</button>
-                        <button type="submit" class="'btn-primary">Create Folder</button>
-                    </div>
-                </form>
-            </div>
-
-            <div class="modal" id="account-modal">
-                <h3>Create New Account</h3>
-                <form id="account-form">
-                    <div class="form-group">
-                        <label>Account Name</label>
-                        <input type="text" id="account-name" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Account Type</label>
-                        <select id="account-type">
-                            <option value="checking">Checking Account</option>
-                            <option value="bill">Bill Account</option>
-                            <option value="expense" selected>Expense Account</option>
-                            <option value="goal">Goal Account</option>
-                            <option value="savings">Savings Account</option>
-                            <option value="investment">Investment Account</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label>Folder</label>
-                        <select id="account-folder" required></select>
-                    </div>
-                    <div class="form-group">
-                        <label>Monthly Budget (optional)</label>
-                        <input type="number" step="0.01" id="monthly-budget" placeholder="0.00">
-                    </div>
-                    <div class="form-group">
-                        <label>Target Amount (for goals)</label>
-                        <input type="number" step="0.01" id="target-amount" placeholder="0.00">
-                    </div>
-                    <div class="form-group">
-                        <label>Deadline (for goals)</label>
-                        <input type="date" id="deadline">
-                    </div>
-                    <div class="form-group">
-                        <label>Current Balance</label>
-                        <input type="number" step="0.01" id="current-balance" value="0" required>
-                    </div>
-                    <div class="form-actions">
-                        <button type="button" id="cancel-account">Cancel</button>
-                        <button type="submit" class="btn-primary">Create Account</button>
-                    </div>
-                </form>
-            </div>
-         </div>
-    </div>
-
-    <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Money Mentor</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
